--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.9.0",
+    "dayjs": "^1.11.10",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-range": "^1.8.14",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
